data/Java/20-missing-paren/5/[M]Error.txt
https://stackify.com/top-java-software-errors/
MyClass.java:9: error: ')' expected
                if (solidom.equalsIgnoreCase("cilindro") {
                                                        ^